# simple-watch

./: Cargo.toml  LICENSE  README.md
src/: README.md  main.rs  settings.rs
